--- a/modules/ROOT/pages/apis/tinymce.editor.adoc
+++ b/modules/ROOT/pages/apis/tinymce.editor.adoc
@@ -175,7 +175,7 @@ Constructs a editor instance by id.
 
 * `id (String)` - Unique id for the editor.
 * `settings (Object)` - Settings for the editor.
-* `editorManager (xref:apis/tinymce.editor.adoc[EditorManager])` - EditorManager instance.
+* `editorManager (xref:apis/tinymce.editormanager.adoc[EditorManager])` - EditorManager instance.
 
 [[methods]]
 == Methods
