Update export-to-pdf-installation.adoc - content changes

--- a/modules/ROOT/partials/individually-licensed-components/export-to-pdf/export-to-pdf-installation.adoc
+++ b/modules/ROOT/partials/individually-licensed-components/export-to-pdf/export-to-pdf-installation.adoc
@@ -14,7 +14,7 @@ Refer to the xref:individual-export-to-pdf-on-premises.adoc#requirements[Require
 
 === Setting up the application using a Docker container
 
-. Use instructions from the {productname} Ecosystem customer dashboard to log into the {pluginname} On-Premises (PDF converter) Docker registry and pull the Docker image.
+. link:https://www.tiny.cloud/contact/[Contact us] for instructions to log into the {pluginname} On-Premises (PDF converter) Docker registry and pull the Docker image.
 . Containerize the application using `docker` or `docker-compose`.
 . Use a demo page to verify if the application works properly.
 
