Update export-to-pdf-installation.adoc - updated image name

--- a/modules/ROOT/partials/individually-licensed-components/export-to-pdf/export-to-pdf-installation.adoc
+++ b/modules/ROOT/partials/individually-licensed-components/export-to-pdf/export-to-pdf-installation.adoc
@@ -83,7 +83,7 @@ docker-compose up
 
 === Windows fonts support
 
-If using Windows fonts like Calibri, Verdana, etc. in PDF files, use the `pdf-converter` Docker image and run it on a Windows operating system.
+If using Windows fonts like Calibri, Verdana, etc. in PDF files, use the `pdf-converter-windows-tiny` Docker image and run it on a Windows operating system.
 
 See xref:individual-export-to-pdf-on-premises.adoc#fonts[Fonts] section for more details.
 
