DOC-2349: Fixed error with help plugin

--- a/modules/ROOT/partials/integrations/react-bundling.adoc
+++ b/modules/ROOT/partials/integrations/react-bundling.adoc
@@ -32,6 +32,7 @@ import 'tinymce/plugins/media';
 import 'tinymce/plugins/nonbreaking';
 import 'tinymce/plugins/table';
 import 'tinymce/plugins/help';
+import 'tinymce/plugins/help/js/i18n/keynav/en';
 
 // Content styles, including inline UI like fake cursors
 import 'tinymce/skins/content/default/content.js';
