--- a/modules/ROOT/partials/integrations/react-quick-start.adoc
+++ b/modules/ROOT/partials/integrations/react-quick-start.adoc
@@ -213,6 +213,7 @@ import 'tinymce/plugins/directionality';
 import 'tinymce/plugins/emoticons';
 import 'tinymce/plugins/fullscreen';
 import 'tinymce/plugins/help';
+import 'tinymce/plugins/help/js/i18n/keynav/en';
 import 'tinymce/plugins/image';
 import 'tinymce/plugins/importcss';
 import 'tinymce/plugins/insertdatetime';
@@ -473,6 +474,7 @@ import './tinymce/plugins/directionality/plugin.min.js';
 import './tinymce/plugins/emoticons/plugin.min.js';
 import './tinymce/plugins/fullscreen/plugin.min.js';
 import './tinymce/plugins/help/plugin.min.js';
+import './tinymce/plugins/help/js/i18n/keynav/en.js';
 import './tinymce/plugins/image/plugin.min.js';
 import './tinymce/plugins/importcss/plugin.min.js';
 import './tinymce/plugins/insertdatetime/plugin.min.js';
