fix heading capitalization

--- a/modules/ROOT/pages/7.0.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.0.1-release-notes.adoc
@@ -213,7 +213,7 @@ For information on using Enhanced Skins & Icon Packs, see: xref:enhanced-skins-a
 
 {productname} {release-version} also includes the following bug fixes:
 
-=== Backspacing in certain html setups resulted in data moving around unexpectedly.
+=== Backspacing in certain HTML setups resulted in data moving around unexpectedly.
 // #TINY-10590
 
 Previously in {productname}, when backspacing with a block inside of another block and the caret was placed on the line after the inner block, the editor mistakenly merged the two blocks instead of merging the inner block with just the line after it. This resulted in unexpected behavior where the text in the inner block would be moved to the top of the outer block.
