DOC-2349: Swapped out these 'gpl' `licenseKey`s

--- a/modules/ROOT/partials/integrations/react-quick-start.adoc
+++ b/modules/ROOT/partials/integrations/react-quick-start.adoc
@@ -241,7 +241,7 @@ import 'tinymce/skins/ui/oxide/content';
 export default function BundledEditor(props) {
   return (
     <Editor
-      licenseKey='gpl'
+      licenseKey='your-license-key'
       {...props}
     />
   );
@@ -502,7 +502,7 @@ import './tinymce/skins/ui/oxide/content.js';
 export default function BundledEditor(props) {
   return (
     <Editor
-      licenseKey='gpl'
+      licenseKey='your-lisense-key'
       {...props}
     />
   );
