Update import-from-word-and-export-to-word-overview-on-premises.adoc - content alignment

--- a/modules/ROOT/partials/individually-licensed-components/import-from-word-and-export-to-word/import-from-word-and-export-to-word-overview-on-premises.adoc
+++ b/modules/ROOT/partials/individually-licensed-components/import-from-word-and-export-to-word/import-from-word-and-export-to-word-overview-on-premises.adoc
@@ -7,9 +7,7 @@ About xref:importword.adoc[Import from Word] and xref:exportword.adoc[Export to 
 
 The On-Premises version of the {pluginname} features is an application that can be installed and run on the customer’s in-house servers and computing infrastructure, including a private cloud. It contains all the features of the {pluginname} converters available as SaaS.
 
-A valid license key is needed in order to install {pluginname} On-Premises.
-
-link:https://www.tiny.cloud/contact/[Contact us] for a trial license key.
+A valid license key is needed in order to install {pluginname} On-Premises. link:https://www.tiny.cloud/contact/[Contact us] for a trial license key.
 
 The documentation in this section refers to a simplified version of the {pluginname} On-Premises which was designed to be easy to set up and maintain (while preserving all the features). It also lowers the running costs by reducing the number of servers required to run the whole application to the minimum.
 
