--- a/modules/ROOT/partials/individually-licensed-components/import-from-word-and-export-to-word/import-from-word-and-export-to-word-logs-on-premises.adoc
+++ b/modules/ROOT/partials/individually-licensed-components/import-from-word-and-export-to-word/import-from-word-and-export-to-word-logs-on-premises.adoc
@@ -84,8 +84,8 @@ The `logConfiguration` may look similar to this:
   "logDriver": "awslogs",
   "options": {
     "awslogs-region": "us-west-2",
-    "awslogs-group": "cksource",
-    "awslogs-stream-prefix": "ck-docx-converter-logs"
+    "awslogs-group": "tinysource",
+    "awslogs-stream-prefix": "tiny-docx-converter-logs"
   }
 }
 ----
