--- a/modules/ROOT/partials/individually-licensed-components/export-to-pdf/export-to-pdf-api-usage.adoc
+++ b/modules/ROOT/partials/individually-licensed-components/export-to-pdf/export-to-pdf-api-usage.adoc
@@ -3,7 +3,7 @@
 
 The {pluginname} On-Premises converter provides the ability to convert an HTML document to a PDF file via Restful API.
 
-The API is available on `http://localhost:[port]` (by default the `port` is `8080`).
+The API is available on `+http://localhost:[port]+` (by default the `port` is `8080`).
 
 [NOTE]
 The REST API documentation is available at `http://localhost:[port]/docs`.
