--- a/modules/ROOT/partials/individually-licensed-components/import-from-word-and-export-to-word/import-from-word-and-export-to-word-requirements-on-premises.adoc
+++ b/modules/ROOT/partials/individually-licensed-components/import-from-word-and-export-to-word/import-from-word-and-export-to-word-requirements-on-premises.adoc
@@ -11,7 +11,8 @@ Assuming response time below 10 seconds, one server (2CPU 2GB RAM) with 1 docker
 * up to 30 concurrent requests with an average content of 5 A4 pages (~7,5k characters)
 * up to 10 concurrent requests with an average content of 20 A4 pages (~30k characters)
 
-> The listed concurrent requests numbers are not a hard limit of a {pluginname} On-Premises instance. It can handle more concurrent requests, but the response time will be longer.
+[NOTE]
+The listed concurrent requests numbers are not a hard limit of a {pluginname} On-Premises instance. It can handle more concurrent requests, but the response time will be longer.
 
 === High availability
 
