--- a/modules/ROOT/partials/individually-licensed-components/import-from-word-and-export-to-word/import-from-word-and-export-to-word-installation-on-premises.adoc
+++ b/modules/ROOT/partials/individually-licensed-components/import-from-word-and-export-to-word/import-from-word-and-export-to-word-installation-on-premises.adoc
@@ -1,7 +1,8 @@
 [[installation]]
 == Installation
 
-> A valid license key is needed in order to install {pluginname} On-Premises.
+[NOTE]
+A valid license key is needed in order to install {pluginname} On-Premises.
 link:https://www.tiny.cloud/contact/[Contact us] for a trial license key.
 
 === Supported technologies
