--- a/modules/ROOT/partials/individually-licensed-components/import-from-word-and-export-to-word/import-from-word-and-export-to-word-installation-on-premises.adoc
+++ b/modules/ROOT/partials/individually-licensed-components/import-from-word-and-export-to-word/import-from-word-and-export-to-word-installation-on-premises.adoc
@@ -15,7 +15,7 @@ Refer to the xref:individual-import-from-word-and-export-to-word-on-premises.ado
 
 === Setting up the application using a Docker container
 
-. Use instructions from the {productname} Ecosystem customer dashboard to log into the {pluginname} On-Premises (PDF converter) Docker registry and pull the Docker image.
+. The username and password credentials supplied by Tiny are utilized for logging into the Docker registry and retrieving the Docker image.
 . Containerize the application using `docker` or `docker-compose`.
 . Use a demo page to verify if the application works properly.
 
