--- a/modules/ROOT/partials/individually-licensed-components/import-from-word-and-export-to-word/import-from-word-and-export-to-word-api-usage-on-premises.adoc
+++ b/modules/ROOT/partials/individually-licensed-components/import-from-word-and-export-to-word/import-from-word-and-export-to-word-api-usage-on-premises.adoc
@@ -8,7 +8,8 @@
 
 The API is available on `http://localhost:[port]` (by default the port is 8080).
 
-> The REST API documentation is available at `http://localhost:[port]/docs`.
+[NOTE]
+The REST API documentation is available at `+http://localhost:[port]/docs+`.
 Alternatively you can check specification in our public resources for link:https://importdocx.converter.tiny.cloud/docs#section/Import-from-Word[Import from Word^] and the link:https://exportdocx.converter.tiny.cloud/docs#section/Export-to-Word[Export to Word^] plugins.
 
 If you have the authorization for the API enabled, you should provide an authorization token. More instructions you can find in the authorization section.
