--- a/modules/ROOT/pages/7.0.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.0.1-release-notes.adoc
@@ -69,9 +69,9 @@ This **Markdown** release includes the following fixes and improvements.
 ==== Pasting markdown into some situations would cause the pasted data to be placed in unexpected places.
 // #TINY-10766 / TINY-10788 / #TINY-10749
 
-Previously in the **Markdown** plugin, the "markdown-on-paste" feature used the `editor.selection.setContent` function to insert content into the {productname} editor. This approach resulted in some unnecessary `+&nbsp;+` characters being appended before and after the pasted text. As a result, the editor experienced some unexpected content placement behavior.
+Previously in the **Markdown** plugin, the "markdown-on-paste" feature used the `editor.selection.setContent` function to insert content into the {productname} editor. This approach resulted in some unnecessary `+&nbsp;+` characters being appended before and after the pasted text. As a result, the editor experienced some unexpected content placement behavior and possible duplicated content.
 
-{productname} {release-version} addresses this issue by changing the paste feature to use the `editor.insertContent` function instead. As a result, pasting markdown no longer adds unnecessary `+&nbsp;+` and the pasted content is placed in the correct location.
+{productname} {release-version} addresses this issue by changing the paste feature to use the `editor.insertContent` function instead. As a result, pasting markdown no longer adds unnecessary `+&nbsp;+` and the pasted content is placed correctly and does not duplicate.
 
 NOTE: This fix addresses xref:7.0-release-notes.adoc#known-issues[a known issue] in the xref:markdown.adoc[Markdown premium plugin].
 
