--- a/modules/ROOT/pages/7.0.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.0.1-release-notes.adoc
@@ -44,22 +44,29 @@ In {productname} {release-version}, this issue has been fixed. Now, when `advcod
 
 For information on the **Enhanced Code Editor** plugin, see: xref:advcode.adoc[Enhanced Code Editor].
 
-=== Revision History
+=== Markdown
 
-The {productname} {release-version} release includes an accompanying release of the **Revision History** premium plugin.
+The {productname} {release-version} release includes an accompanying release of the **Markdown** premium plugin.
 
-This **Revision History** release includes the following fix.
+This **Markdown** release includes the following fixes and improvements.
 
-==== Reduce the chance of diff annotation styles being overridden by inline styles.
-// #TINY-10785
+==== Pasting markdown then pressing undo resulted in incorrect text layout.
+// #TINY-10747
 
-Previously in **Revision History**, the inline CSS styles of content took precedence over the diff annotation styles. As a consequence, the changes highlighted were not distinguishable to the users.
+Previously in **Markdown**, the markdown paste feature performed a direct content insertion for creating the intermediary undo level between the raw pasted content and the markdown conversion. As a consequence, the editor would lose the newline formatting of the original text when pasting markdown and then pressing undo.
 
-{productname} {release-version} addresses this issue by adding  an `!important` declaration to the default annotation styles. As a result, the annotation styling properties will take precedence over the inline styles, ensuring that the changes are clearly visible to the users.
+In {productname} {release-version}, the markdown paste feature has been updated to use the clipboard insert command for creating the undo level. This ensures that the editor retains the newline formatting of the original text when pasting markdown and then pressing undo.
 
-NOTE: This fix assumes that the inline styles are not using `!important` declarations. If the inline styles are using `!important` declarations, the annotation styles will be overridden.
+==== Pasting markdown into some situations would cause the pasted data to be placed in unexpected places.
+// #TINY-10766, also addresses TINY-10788 and #TINY-10749
 
-For information on the **Revision History** plugin, see: xref:revisionhistory.adoc[Revision History].
+Previously in the **Markdown** plugin, the "markdown-on-paste" feature used the `editor.selection.setContent` function to insert content into the {productname} editor. This approach resulted in some unnecessary `+&nbsp;+` characters being appended before and after the pasted text. As a result, the editor experienced some unexpected content placement behavior and possible duplicated content.
+
+{productname} {release-version} addresses this issue by changing the paste feature to use the `editor.insertContent` function instead. As a result, pasting markdown no longer adds unnecessary `+&nbsp;+` and the pasted content is placed correctly and does not duplicate.
+
+NOTE: This fix addresses xref:7.0-release-notes.adoc#non-breaking-spaces-nbsp-may-be-inadvertently-inserted-around-content-during-markdown-conversion[a known issue] in the xref:markdown.adoc[Markdown premium plugin].
+
+For information on the **Markdown** plugin, see: xref:markdown.adoc[Markdown].
 
 === Mentions
 
@@ -76,29 +83,22 @@ In {productname} {release-version}, this issue has been fixed. Now, the autocomp
 
 For information on the **Mentions** plugin, see: xref:mentions.adoc[Mentions].
 
-=== Markdown
+=== Revision History
 
-The {productname} {release-version} release includes an accompanying release of the **Markdown** premium plugin.
+The {productname} {release-version} release includes an accompanying release of the **Revision History** premium plugin.
 
-This **Markdown** release includes the following fixes and improvements.
+This **Revision History** release includes the following fix.
 
-==== Pasting markdown into some situations would cause the pasted data to be placed in unexpected places.
-// #TINY-10766 / TINY-10788 / #TINY-10749
+==== Reduce the chance of diff annotation styles being overridden by inline styles.
+// #TINY-10785
 
-Previously in the **Markdown** plugin, the "markdown-on-paste" feature used the `editor.selection.setContent` function to insert content into the {productname} editor. This approach resulted in some unnecessary `+&nbsp;+` characters being appended before and after the pasted text. As a result, the editor experienced some unexpected content placement behavior and possible duplicated content.
+Previously in **Revision History**, the inline CSS styles of content took precedence over the diff annotation styles. As a consequence, the changes highlighted were not distinguishable to the users.
 
-{productname} {release-version} addresses this issue by changing the paste feature to use the `editor.insertContent` function instead. As a result, pasting markdown no longer adds unnecessary `+&nbsp;+` and the pasted content is placed correctly and does not duplicate.
+{productname} {release-version} addresses this issue by adding  an `!important` declaration to the default annotation styles. As a result, the annotation styling properties will take precedence over the inline styles, ensuring that the changes are clearly visible to the users.
 
-NOTE: This fix addresses xref:7.0-release-notes.adoc#non-breaking-spaces-nbsp-may-be-inadvertently-inserted-around-content-during-markdown-conversion[a known issue] in the xref:markdown.adoc[Markdown premium plugin].
+NOTE: This fix assumes that the inline styles are not using `!important` declarations. If the inline styles are using `!important` declarations, the annotation styles will be overridden.
 
-==== Pasting markdown then pressing undo resulted in incorrect text layout.
-// #TINY-10747
-
-Previously in **Markdown**, the markdown paste feature performed a direct content insertion for creating the intermediary undo level between the raw pasted content and the markdown conversion. As a consequence, the editor would lose the newline formatting of the original text when pasting markdown and then pressing undo.
-
-In {productname} {release-version}, the markdown paste feature has been updated to use the clipboard insert command for creating the undo level. This ensures that the editor retains the newline formatting of the original text when pasting markdown and then pressing undo.
-
-For information on the **Markdown** plugin, see: xref:markdown.adoc[Markdown].
+For information on the **Revision History** plugin, see: xref:revisionhistory.adoc[Revision History].
 
 === Table of Contents
 
@@ -148,13 +148,6 @@ For information on the **Table of Contents** plugin, see: xref:tableofcontents.a
 
 {productname} {release-version} also includes the following bug fixes:
 
-=== The status bar was invisible when the editor's height was set to the minimum.
-// #TINY-10705
-
-As a part of the change to add link:https://www.tiny.cloud/docs/tinymce/6/6.3-release-notes/#a-new-addview-api-was-added-to-editor-ui-registry[_addView API_], the status bar was moved inside the editor container. Consequently, when the editor's height was set to the minimum and the toolbar contained many buttons, the status bar would be hidden under the toolbar buttons.
-
-In {productname} {release-version}, this change is reverted by moving the status bar outside the editor. As a result, the status bar is now visible even when the editor's height is resized to the minimum.
-
 === Toggle list behavior generated wrong HTML when the `forced_root_block` option was set to `div`.
 // #TINY-10488
 
@@ -175,3 +168,10 @@ Previously in {productname}, when using an inline editor within a horizontally s
 Previously in {productname}, toolbar tooltips within the editor were positioned as `absolute`. This caused tooltips to shrink and become misplaced when the editor was placed inside a container with horizontal scrolling.
 
 To resolve this issue, the tooltip element is now styled with a "max-content" width. As a result, tooltips within the editor's toolbar will display as intended and remain anchored to the corresponding button regardless of the presence of horizontal scrolling.
+
+=== The status bar was invisible when the editor's height was set to the minimum.
+// #TINY-10705
+
+As a part of the change to add link:https://www.tiny.cloud/docs/tinymce/6/6.3-release-notes/#a-new-addview-api-was-added-to-editor-ui-registry[_addView API_], the status bar was moved inside the editor container. Consequently, when the editor's height was set to the minimum and the toolbar contained many buttons, the status bar would be hidden under the toolbar buttons.
+
+In {productname} {release-version}, this change is reverted by moving the status bar outside the editor. As a result, the status bar is now visible even when the editor's height is resized to the minimum.
